[package]
name = "hyperliquid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperliquid_rust_sdk = "0.3.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.15", features = ["rustls-tls"] }
futures-util = "0.3"
tungstenite = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
reqwest = { version = "0.11", features = ["json"] }
hmac-sha1 = "0.2.2"
urlencoding = "2.1.3"
base64 = "0.21.7"
dotenv = "0.15.0"
textnonce = "1.0.0"
chrono = "0.4.34"
percent-encoding = "2.3.1"
hmac = "0.12.1"
sha1 = "0.10.6"
base64-url = "2.0.2"
reqwest-oauth1 = "0.2.4"